Add test coverage for CycleCheckAction and CheckEdgesAction (#3021)
#### Rationale
These actions in `ExperimentController` were completely untested and
completely broken.

#### Related Pull Requests
- https://github.com/LabKey/platform/pull/7697

#### Changes
- Hit the happy path for these actions in SampleTypeLineageTest.
Platform PR adds coverage for some unhappy paths.